--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+  <div class="hero">
+	  <div class="image">
+		  <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="no-image" />
+	  </div>
+	  <div class="text">
+		  <h2>Welcome to my Pinterest clone</h2>
+		  <p>Discover new insperation and save your favorite ideas</p>
+		  <button type="button">Explore Now</button>
+	  </div>
+  </div>
 </body>
 
 </html>
