--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 		  <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="no-image" />
 	  </div>
 	  <div class="text">
-		  <h2>Welcome to my Pinterest clone</h2>
+		  <h1>Welcome to my Pinterest clone</h1>
 		  <p>Discover new insperation and save your favorite ideas</p>
-		  <button type="button">Explore Now</button>
+		  <button type="button"><a href="#">Explore Now</a></button>
 	  </div>
   </div>
 </body>
